# 2wd-diff-drive-bot

./: .gitignore  LICENSE  README.md
firmware/bot_firmware/: README.md  platformio.ini
firmware/bot_firmware/src/: main.cpp
src/bot_bringup/: CMakeLists.txt  README.md  package.xml
src/bot_bringup/config/: teleop.config.yaml
src/bot_bringup/launch/: micro_ros.launch.py  robot.launch.py  sim.launch.py  teleop.launch.py
src/bot_description/: CMakeLists.txt  README.md  package.xml
src/bot_description/meshes/: bateria_18650.stl  caster_40mm_swivel_plate_01.stl  caster_40mm_wheel_30mm_01.stl  caster_40mm_wheel_support_01.stl  chassis.stl  contacto_plano_v1_0.stl  half_size_side_rail.stl  main_half_size_board.stl  motor_holders.stl  porta_baterias_2x18650.stl  remache_v1_0.stl  spacer.stl  tt_motor_3777_v10.stl  tt_motor_3777_v10__2.stl  tt_motor_3777_v10__3.stl  tt_motor_3777_v10__4.stl  tt_motor_3777_v10__5.stl  tt_motor_3777_v10__6.stl  tt_motor_3777_v10__8.stl  wheel.stl
src/bot_description/onshape/: README.md  config.json  postprocess.py
src/bot_description/urdf/: bot.urdf  bot.urdf.xacro  gazebo.xacro
